Report : the analytical part has been completed.

--- a/report/intro.tex
+++ b/report/intro.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
 
-Ce projet d'optimisation, qui est un module du master \emph{Ingénierie Mathématique Pour l'Entreprise}, consiste à configurer un lanceur spatial afin de mettre sur orbite un satellite. Dans notre cas, il s'agit d'amener une masse utile $m_{\textrm{u}}=1~500~\textrm{kg}$ en orbite, à l'altitude $R_{\textrm{c}}=200~\textrm{km}$.
+Ce projet d'optimisation, qui est un module du master \emph{Ingénierie Mathématique Pour l'Entreprise}, consiste à configurer un lanceur spatial afin de mettre sur orbite un satellite. Dans notre cas, il s'agit d'amener une masse utile $\payload=1~500~\textrm{kg}$ en orbite, à l'altitude $\targetalt=200~\textrm{km}$.
 
 Dans ce rapport, nous décrivons d'abord succinctement la fonction \lstinline+SQP+, nous résumons les cas tests, nous expliquons ensuite l'optimisation du lanceur et nous présentons enfin les résultats issus de cette optimisation.
 
