--- a/report/report.tex
+++ b/report/report.tex
@@ -34,9 +34,9 @@
 \newcommand\targetvlct{\mathrm{V}_{\mathrm{c}}}%target velocity
 \newcommand\payload{\mathrm{m}_{\mathrm{u}}}%payload
 \newcommand\targetalt{\mathrm{H}_{\mathrm{c}}}%target altitude
+\newcommand\durcombustion[1]{t_{\mathrm{c}\,#1}}%duration of combustion
 
-
-\includeonly{intro, analytical_part}
+\includeonly{intro, analytical_part, results}
 
 
 \begin{document}
