Adrien's part has been added.

--- a/report/analytical_part.tex
+++ b/report/analytical_part.tex
@@ -14,7 +14,7 @@ Alors $\varphi$ est bijective car pour tout $j\in\{1,2,3\}$
 \[\masspropel{j}=\dfrac{\payload + \sum_{j<l\leqslant 3}(1+\constructidx{l})\masspropel{l}}{1+\constructidx{j}(1-x_{j})}\]
 et donc $J=-f\circ \varphi$. La reformulation de la contrainte étant immédiate, les deux problèmes considérés sont équivalents.
 
-\question Si $x$ est un minimiseur local de $f$ sous la contrainte $c$, comme ces deux fonctions sont de classe $\mathscr{C}^1$ et que la contrainte en $x$ est forcément qualifiée, il existe $\lambda\in\mathbb{R}$ tel que, pour tout $j\in\{1,2,3\}$
+\question Si $x$ est un minimiseur local de $f$ sous la contrainte $c$, comme ces deux fonctions sont de classe $\mathscr{C}^1$ et que la contrainte en $x$ est forcément qualifiée, alors d'après le théorème des extrema liés il existe $\lambda\in\mathbb{R}$ tel que, pour tout $j\in\{1,2,3\}$
 \[\dfrac{\partial f}{\partial x_{j}}(x) + \lambda\dfrac{\partial c}{\partial x_{j}}(x) = 0\]
 avec
 \[\dfrac{\partial f}{\partial x_{j}}(x) = y_{j+1}\,y_{j+2}\left(\dfrac{1+\constructidx{j}}{x_{j}^{2}}\right)%
