--- a/report/results.tex
+++ b/report/results.tex
@@ -32,32 +32,40 @@ t_{1} & t_{2} & t_{3}\\\hline
 
 \clearpage
 \begin{center}
-\begin{figure}[t]
-\includegraphics[scale=0.55]{./graphs/path.jpg}
+\begin{figure}[htbp]
+\includegraphics[scale=0.65]{./graphs/path.jpg}
 \caption{trajectoire de la fusée et vecteur vitesse final}
 \end{figure}
 \end{center}
 
+D'après ce graphe, il semble que l'altitude cible est atteinte et que le vecteur vitesse final est bien tangent à l'orbite visée.
 
+\clearpage
 \begin{center}
 \begin{figure}[t]
-\includegraphics[scale=0.55]{./graphs/altitude.jpg}
+\includegraphics[scale=0.65]{./graphs/altitude.jpg}
 \caption{altitude de la fusée en fonction du temps}
 \end{figure}
 \end{center}
 
-\clearpage
-\begin{center}
-\begin{figure}[t]
-\includegraphics[scale=0.55]{./graphs/velocity.jpg}
-\caption{vitesse de la fusée en fonction du temps}
-\end{figure}
-\end{center}
+L'altitude cible est bien atteinte selon ce graphe.
 
 \clearpage
 \begin{center}
 \begin{figure}[t]
-\includegraphics[scale=0.55]{./graphs/mass.jpg}
+\includegraphics[scale=0.65]{./graphs/velocity.jpg}
+\caption{vitesse de la fusée en fonction du temps}
+\end{figure}
+\end{center}
+
+On peut s'assurer avec ce graphe que la vitesse cible est vraiment atteinte.
+
+\clearpage
+\begin{center}
+\begin{figure}[t]
+\includegraphics[scale=0.65]{./graphs/mass.jpg}
 \caption{masse de la fusée en fonction du temps}
 \end{figure}
 \end{center}
+
+La masse est bien une fonction affine par morceaux. La masse utile n'a pas été représentée afin de rendre le graphe plus clair.
