Adrien's part for the report has been revised.

--- a/report/global.tex
+++ b/report/global.tex
@@ -40,23 +40,23 @@ Comme le reste de nos algorithmes, ce script travaille sur des variables globale
 Le problème d'étagement est encodé dans \texttt{"stageproblem"}. La fonction prend en argument un vecteur \texttt{"m"} des masses d'ergol et retourne deux réels : \texttt{Mi} et \texttt{y}. \texttt{Mi} est la masse initiale de la fusée, construite à partir des masses d'ergol. Il s'agit de la quantité à minimiser dans le problème d'optimisation. y est la valeur de la fonction contrainte du problème d'étagement prise en \texttt{"m"} .\medbreak
 \subsubsection{Problème de trajectoire}\medbreak
 
-Afin de coder le problème de trajectoire, on doit résoudre une EDO. La fonction \texttt{"pathproblem"} prend en argument un vecteur \texttt{"theta"} de quatre composantes et renvoie "-" la norme de la vitesse (réécriture du probleme avec l'idée max = "-" min) et la valeur la contrainte normalisée selon les $\theta_0, \theta_1, \theta_2, \theta_3$ dans \texttt{"theta"}. \\
-La principale difficultée est de résoudre l'EDO. Pour cela, on construit la fonction "rocketpath" qui se servira elle-même de \texttt{"odefunc"}.\\
-\texttt{"rocketpath"} renvoie 6 vecteurs : tous les $R_x$ et $R_y$ stockés dans \texttt{R}, tous les $V_x$ et $V_y$ stockés dans \texttt{V}, toutes les masses stockées dans \texttt{M} et l'ensemble des temps d'intégration \texttt{"tspanout"} (à chaque temps correspond une donnée ($R_x,R_y,V_x,V_y$,M). Les arguments donnés sont les 4 thetas. On commence par initialiser \texttt{"R", "V", "tspan"} qui servira de bornes d'intégration pour ODE45 et \texttt{"tspanout"} qu'on remplira avec les temps ressortis par ODE45. On boucle sur les 3 changements d'angle avec ODE45 qui prend en appel la fonction \texttt{"odefunc"}. Durant cette boucle, on concatène les resutats dans \texttt{"res"} et \texttt{"tspanout"}. Enfin, on extrait les résultats dans 2 doubles vecteurs \texttt{"R"} et \texttt{"V"} et un vecteur "M".\\
+Afin de coder le problème de trajectoire, on doit résoudre une EDO. La fonction \texttt{"pathproblem"} prend en argument un vecteur \texttt{"theta"} de quatre composantes et renvoie "-" la norme de la vitesse (réécriture du problème avec l'idée max = "-" min) et la valeur la contrainte normalisée selon les $\theta_0, \theta_1, \theta_2, \theta_3$ dans \texttt{"theta"}. \\
+La principale difficulté est de résoudre l'EDO. Pour cela, on construit la fonction "rocketpath" qui se servira elle-même de \texttt{"odefunc"}.\\
+\texttt{"rocketpath"} renvoie 6 vecteurs : tous les $R_x$ et $R_y$ stockés dans \texttt{R}, tous les $V_x$ et $V_y$ stockés dans \texttt{V}, toutes les masses stockées dans \texttt{M} et l'ensemble des temps d'intégration \texttt{"tspanout"} (à chaque temps correspond une donnée ($R_x,R_y,V_x,V_y$, M). Les arguments donnés sont les 4 thetas. On commence par initialiser \texttt{"R", "V", "tspan"} qui servira de bornes d'intégration pour ODE45 et \texttt{"tspanout"} qu'on remplira avec les temps ressortis par ODE45. On boucle sur les 3 changements d'angle avec ODE45 qui prend en appel la fonction \texttt{"odefunc"}. Durant cette boucle, on concatène les résultats dans \texttt{"res"} et \texttt{"tspanout"}. Enfin, on extrait les résultats dans 2 doubles vecteurs \texttt{"R"} et \texttt{"V"} et un vecteur "M".\\
 
-La fonction \texttt{"odefunc"} résout l'EDO en intégrant sur un intervalle de temps donné. Elle prend en argument les données de l'étage en cours de consommation. On définit dedans les constantes physiques puis on remplit le vecteur dydt en fonction du vecteur y construit précédemment.\medbreak
+La fonction \texttt{"odefunc"} décrit le second membre de l'EDO. Elle prend en argument les données de l'étage en cours de consommation. On définit dedans les constantes physiques puis on remplit le vecteur dydt en fonction du vecteur y construit précédemment.\medbreak
 
 \subsection{Résolution des problèmes via SQP}\medbreak
 On dispose donc de deux fonctions problèmes d'étagement et de trajectoire. Il s'agit maintenant de résoudre ces deux problèmes.\\
-On va construire deux scripts pour résoudre ces problèmes séparemment et deux fonctions reprennant les principes respectifs des scripts.\medbreak
+On va construire deux scripts pour résoudre ces problèmes séparémment et deux fonctions reprennant les principes respectifs des scripts.\medbreak
 
 
 \subsubsection{Résolution du problème d'étagement}\medbreak
 
 On commence par créer le script \texttt{"solve\_stageproblem"} : \\
-\indent - On reprend la solution analytique trouvée dans \texttt{"analytical\_approach"} qu'on pose comme \texttt{"m0"} et on pose les bornes à plus et moins 1500, 1000, 500. On va utiliser SQP donc on place les déplacements minimum ainsi que les maxima d'itérations et d'appels sur f et c. On applique SQP pour trouver les masses d'ergol qui minimisent la masse finale de la fusée. Ce vecteur de 3 masses d'ergol \texttt{"m\_e" }est stocké dans un fichier \texttt{"m\_e.mat"}\medbreak
+\indent - On reprend la solution analytique trouvée dans \texttt{"analytical\_approach"} qu'on pose comme \texttt{"m0"} et on pose les bornes à plus et moins 1500, 1000, 500. On va utiliser SQP donc on place les déplacements minimum ainsi que les maxima d'itérations et d'appels sur f et c. On applique SQP pour trouver les masses d'ergol qui minimisent la masse finale de la fusée. Ce vecteur de 3 masses d'ergol \texttt{"m\_e" }est stocké dans un fichier \texttt{"m\_e.mat"}.\medbreak
 
-Nous créeons ensuite \texttt{"stage\_solver"} qui est une fonction de type "void" là encore. On initialise les bornes proches de la solution analytique. L'idée est ensuite, pour un nombre d'essais donné, de générer aléatoirement un vecteur de masse d'ergol dans cet intervalle. Après application de SQP, on teste si $\|    \nabla $L$   \|$ est plus petit qu'une tolérance proche de 0. C'est une façon d'exiger une bonne vérification des conditions KKT d'ordre 1. Dans le cas où aucun vecteur ne vérifie cette condition, on s'assure que l'algorithme retourne quand même le vecteur le plus proche de vérifier cette condition grâce à un second test dans la boucle. Celui-ci remplace l'ancien vecteur des masses d'ergols par celui généré dans la boucle si $\|    \nabla $L$_{nouveau}   \| < \|    \nabla $L$_{ancien}   \|$.\medbreak
+Nous créons ensuite \texttt{"stage\_solver"} qui est une fonction de type "void" là encore. On initialise les bornes proches de la solution analytique. L'idée est ensuite, pour un nombre d'essais donné, de générer aléatoirement un vecteur de masse d'ergol dans cet intervalle. Après application de SQP, on teste si $\|    \nabla $L$   \|$ est plus petit qu'une tolérance proche de 0. C'est une façon d'exiger une bonne vérification des conditions KKT d'ordre 1. Dans le cas où aucun vecteur ne vérifie cette condition, on s'assure que l'algorithme retourne quand même le vecteur le plus proche de vérifier cette condition grâce à un second test dans la boucle. Celui-ci remplace l'ancien vecteur des masses d'ergols par celui généré dans la boucle si $\|    \nabla $L$_{nouveau}   \| < \|    \nabla $L$_{ancien}   \|$.\medbreak
 
 
 \subsubsection{Résolution du problème de trajectoire}\medbreak
@@ -65,11 +65,11 @@ On commence par créer le script \texttt{"solve\_pathproblem"} : \\
 \indent - On respecte les conseils donnés dans le PDF. On commence par charger \texttt{"m\_e.mat"}. Les masses initiales \texttt{"Mi"} à chaque étage ainsi que les temps de combustion "t\_c" se déduisent des masses d'ergol et des données du problème présentes dans \texttt{"data()"}.\\
 On commence par trouver 4 thetas à la main qui donnent une trajectoire assez correcte. On applique \texttt{"rocketpath"} sur ce vecteur \texttt{"theta"} := ($\theta_0,\theta_1,\theta_2,\theta_3$) pour obtenir vitesse et position au fil du temps. Le but est ensuite d'optimiser $\theta_2$, $\theta_3$ puis $\theta_1$, $\theta_2$, $\theta_3$ via SQP appliqué sur des fonctions anonymes. On applique enfin un dernier SQP sur tous les thetas pour améliorer encore la solution. On affiche dans des graphiques les trajectoires et vitesses avec l'altitude visée et la Terre pour observer l'amélioration. Afin de vérifier la cohérence des résultats, on affiche également dans 3 graphiques différents la vitesse, la masse et la distance par rapport à la Terre en fonction du temps.\medbreak
 
-Nous créeons ensuite \texttt{"path\_solver"}. Elle renvoie les thetas, la trajectoire. Comme toujours, on initialise les critères de contôle de la solution et les critères d'arrêt du SQP. Le but est d'obtenir un bon candidat pour \texttt{"theta"} avant d'optimiser $\theta_2$, $\theta_3$ puis $\theta_1$, $\theta_2$, $\theta_3$ via SQP appliqué sur des fonctions anonymes. On reprend l'idée servant à trouver un bon candidat pour les masses d'ergol en générant des thetas aléatoires dans l'intervalle et on arrête si un vecteur est proche de vérifier les conditions KKT d'ordre 1. Si un tel vecteur n'existe pas, on prend le meilleur des vecteurs générés au cours de la boucle.\medbreak
+Nous créons ensuite \texttt{"path\_solver"}. Elle renvoie les thetas, la trajectoire. Comme toujours, on initialise les critères de contôle de la solution et les critères d'arrêt du SQP. Le but est d'obtenir un bon candidat pour \texttt{"theta"} avant d'optimiser $\theta_2$, $\theta_3$ puis $\theta_1$, $\theta_2$, $\theta_3$ via SQP appliqué sur des fonctions anonymes. On reprend l'idée servant à trouver un bon candidat pour les masses d'ergol en générant des thetas aléatoires dans l'intervalle et on arrête si un vecteur est proche de vérifier les conditions KKT d'ordre 1. Si un tel vecteur n'existe pas, on prend le meilleur des vecteurs générés au cours de la boucle.\medbreak
 
 \subsection{Problème final}\medbreak
 
 Le problème final est résolu dans le script \texttt{"set\_config"}. On utilisera \texttt{"path\_solver"} et \texttt{"stage\_solver"}.\\
 On appelle \texttt{"data()"} pour initialiser les valeurs. On poursuit cette initialisation en appelant \texttt{"stage\_solver()"} afin de paramétrer les masses d'ergol et les $\texttt{(M\_i)}_j$ et $\texttt{(t\_c)}_j$ qui en découlent. On pose la tolérance à 10 m/s et le nombre d'itérations maximum à 5.\\
-Dans une boucle \texttt{"while"}, on actualise la vitesse \texttt{V\_p} on exécute successivement \texttt{"stage\_solver"} et \texttt{"path\_solver"}. L'exécution de \texttt{"stage\_solver"} est suivie d'une mise à jour des masses \texttt{M\_i} et des temps de combustion qui seront utilisés par \texttt{"path\_solver"}.\\
+Dans une boucle \texttt{"while"}, on actualise la vitesse \texttt{V\_p}, on exécute successivement \texttt{"stage\_solver"} et \texttt{"path\_solver"}. L'exécution de \texttt{"stage\_solver"} est suivie d'une mise à jour des masses \texttt{M\_i} et des temps de combustion qui seront utilisés par \texttt{"path\_solver"}.\\
 Cette boucle s'arrête une fois que la vitesse réelle est à moins de 10m/s de la vitesse visée ou qu'on dépasse le nombre d'itérations maximum.
