--- a/report/test_cases.tex
+++ b/report/test_cases.tex
@@ -48,7 +48,7 @@ Les résultats sont stockés dans le tableau suivant : \smallbreak
 \end{tabular}\end{table}
 }\normalsize
 \bigbreak
-\textit{Note : les résultats obtenus sont bien conformes aux résultats attendus. On remarquera que sans les bornes, SQP converge vers d'autres minima locaux. Il est donc important de choisir ces bornes proches de la solution attendue. On choisit donc un intervalle de 0.6
+\textit{Note : les résultats obtenus sont bien conformes aux résultats attendus. On remarquera que sans les bornes, SQP converge vers d'autres minima locaux. Il est donc important de choisir ces bornes proches de la solution attendue. On choisit donc un intervalle de longueur 0.6
 autour de celle-ci.}
 \newpage
 
@@ -104,7 +104,7 @@ Les résultats sont stockés dans le tableau suivant : \smallbreak
 	\hline
 	9 & $(143378.6, 32532.79, 8406.05 )^{T}$ & 208598.11 & 3.37 & 3.44 & 126.30 & 40\\
 	\hline
-	10 & $(143403.19, 32874.4, 8379.81 )^{T}$ & 208987.45 & 0.045 & 0.61 & 122.72 & 44\\
+	10 & $(143403.19, 32874.4, 8379.81 )^{T}$ & 208987.45 & 0.049 & 0.61 & 122.72 & 44\\
 	\hline
 \end{tabular}
 \end{table}}
